--- a/WebForm/Pages/Shared/_Layout.cshtml
+++ b/WebForm/Pages/Shared/_Layout.cshtml
@@ -128,7 +128,93 @@
             <!-- Phần dùng riêng-->
             <div class="main-panel">
                 <div class="content-wrapper">
-                    
+                    <div class="row">
+                        <div class="col-lg-12 grid-margin stretch-card">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h4 class="card-title">Danh sách Tour</h4>
+                                    <div class="table-responsive">
+                                        <table class="table table-striped">
+                                            <thead>
+                                                <tr>
+                                                    <th> User </th>
+                                                    <th> First name </th>
+                                                    <th> Amount </th>
+                                                    <th> Deadline </th>
+                                                    <th> Thao tác </th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td> T01 </td>
+                                                    <td> Herman Beck </td>
+                                                    <td> $ 77.99 </td>
+                                                    <td> May 15, 2015 </td>
+                                                    <td> 
+                                                        <button type="button" class="btn btn-warning">Sửa</button> 
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td> T02 </td>
+                                                    <td> Herman Beck </td>
+                                                    <td> $ 77.99 </td>
+                                                    <td> May 15, 2015 </td>
+                                                    <td>
+                                                        <button type="button" class="btn btn-warning">Sửa</button>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td> T03 </td>
+                                                    <td> Herman Beck </td>
+                                                    <td> $ 77.99 </td>
+                                                    <td> May 15, 2015 </td>
+                                                    <td>
+                                                        <button type="button" class="btn btn-warning">Sửa</button>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td> T04 </td>
+                                                    <td> Herman Beck </td>
+                                                    <td> $ 77.99 </td>
+                                                    <td> May 15, 2015 </td>
+                                                    <td>
+                                                        <button type="button" class="btn btn-warning">Sửa</button>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td> T05 </td>
+                                                    <td> Herman Beck </td>
+                                                    <td> $ 77.99 </td>
+                                                    <td> May 15, 2015 </td>
+                                                    <td>
+                                                        <button type="button" class="btn btn-warning">Sửa</button>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td> T06 </td>
+                                                    <td> Herman Beck </td>
+                                                    <td> $ 77.99 </td>
+                                                    <td> May 15, 2015 </td>
+                                                    <td>
+                                                        <button type="button" class="btn btn-warning">Sửa</button>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td> T07 </td>
+                                                    <td> Herman Beck </td>
+                                                    <td> $ 77.99 </td>
+                                                    <td> May 15, 2015 </td>
+                                                    <td>
+                                                        <button type="button" class="btn btn-warning">Sửa</button>
+                                                    </td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
