--- a/WebForm/Pages/Shared/_Layout.cshtml
+++ b/WebForm/Pages/Shared/_Layout.cshtml
@@ -155,6 +155,7 @@
                                                     <td> May 15, 2015 </td>
                                                     <td>
                                                         <button type="button" class="btn btn-warning">Sửa</button>
+                                                        <button type="button" class="btn btn-danger">Xóa</button>
                                                     </td>
                                                 </tr>
                                                 <tr>
@@ -164,6 +165,7 @@
                                                     <td> May 15, 2015 </td>
                                                     <td>
                                                         <button type="button" class="btn btn-warning">Sửa</button>
+                                                        <button type="button" class="btn btn-danger">Xóa</button>
                                                     </td>
                                                 </tr>
                                                 <tr>
@@ -173,6 +175,7 @@
                                                     <td> May 15, 2015 </td>
                                                     <td>
                                                         <button type="button" class="btn btn-warning">Sửa</button>
+                                                        <button type="button" class="btn btn-danger">Xóa</button>
                                                     </td>
                                                 </tr>
                                                 <tr>
@@ -182,6 +185,7 @@
                                                     <td> May 15, 2015 </td>
                                                     <td>
                                                         <button type="button" class="btn btn-warning">Sửa</button>
+                                                        <button type="button" class="btn btn-danger">Xóa</button>
                                                     </td>
                                                 </tr>
                                                 <tr>
@@ -191,6 +195,7 @@
                                                     <td> May 15, 2015 </td>
                                                     <td>
                                                         <button type="button" class="btn btn-warning">Sửa</button>
+                                                        <button type="button" class="btn btn-danger">Xóa</button>
                                                     </td>
                                                 </tr>
                                                 <tr>
@@ -200,6 +205,7 @@
                                                     <td> May 15, 2015 </td>
                                                     <td>
                                                         <button type="button" class="btn btn-warning">Sửa</button>
+                                                        <button type="button" class="btn btn-danger">Xóa</button>
                                                     </td>
                                                 </tr>
                                                 <tr>
@@ -209,6 +215,7 @@
                                                     <td> May 15, 2015 </td>
                                                     <td>
                                                         <button type="button" class="btn btn-warning">Sửa</button>
+                                                        <button type="button" class="btn btn-danger">Xóa</button>
                                                     </td>
                                                 </tr>
                                             </tbody>
