Update web forms - Hung

--- a/WebForm/Pages/Index.cshtml
+++ b/WebForm/Pages/Index.cshtml
@@ -1,212 +1,9 @@
 ﻿@page
 @model IndexModel
 @{
-
+    ViewData["Title"] = "Website Quản Lý Tour";
 
 }
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Website Quản Lý Tour</title>
-    <link rel="stylesheet" href="vendors/typicons.font/font/typicons.css">
-    <link rel="stylesheet" href="vendors/css/vendor.bundle.base.css">
-    <link rel="stylesheet" href="css/vertical-layout-light/style.css">
-    <link rel="shortcut icon" href="images/favicon.png" />
-</head>
-<body>
-    <div class="container-scroller">
-        <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
-            <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-                <a class="navbar-brand brand-logo" href="index.html"><img src="images/logo.svg" alt="logo" /></a>
-                <a class="navbar-brand brand-logo-mini" href="index.html"><img src="images/logo-mini.svg" alt="logo" /></a>
-                <button class="navbar-toggler navbar-toggler align-self-center d-none d-lg-flex" type="button" data-toggle="minimize">
-                    <span class="typcn typcn-th-menu"></span>
-                </button>
-            </div>
-            <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
-                <ul class="navbar-nav mr-lg-2">
-                    <li class="nav-item  d-none d-lg-flex">
-                        <a class="nav-link" href="#">
-                            Calendar
-                        </a>
-                    </li>
-                    <li class="nav-item  d-none d-lg-flex">
-                        <a class="nav-link active" href="#">
-                            Statistic
-                        </a>
-                    </li>
-                    <li class="nav-item  d-none d-lg-flex">
-                        <a class="nav-link" href="#">
-                            Employee
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
 
-        <div class="container-fluid page-body-wrapper">
 
-            <nav class="sidebar sidebar-offcanvas" id="sidebar">
-                <ul class="nav">
-                    <li class="nav-item">
-                        <div class="d-flex sidebar-profile">
-                            <div class="sidebar-profile-image">
-                                <img src="images/faces/face29.png" alt="image">
-                                <span class="sidebar-status-indicator"></span>
-                            </div>
-                            <div class="sidebar-profile-name">
-                                <p class="sidebar-name">
-                                    Website Quản Lý Tour
-                                </p>
-                            </div>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="typcn typcn-document-text menu-icon"></i>
-                            <span class="menu-title">Quản Lý Tour</span>
-                            <i class="menu-arrow"></i>
-                        </a>
-                    </li>
-                    <hr />
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="typcn typcn-globe-outline menu-icon"></i>
-                            <span class="menu-title">Quản Lý Nhân Viên</span>
-                            <i class="menu-arrow"></i>
-                        </a>
-                    </li>
-                    <hr />
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="typcn typcn-document-text menu-icon"></i>
-                            <span class="menu-title">Quản Lý Khách Hàng</span>
-                            <i class="menu-arrow"></i>
-                        </a>
-                    </li>
-                    <hr />
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="typcn typcn-globe-outline menu-icon"></i>
-                            <span class="menu-title">Quản Lý Đoàn</span>
-                            <i class="menu-arrow"></i>
-                        </a>
-                    </li>
-                    <hr />
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="typcn typcn-document-text menu-icon"></i>
-                            <span class="menu-title">Quản Lý Chi Phí</span>
-                            <i class="menu-arrow"></i>
-                        </a>
-                    </li>
-                    <hr />
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="typcn typcn-globe-outline menu-icon"></i>
-                            <span class="menu-title">Quản Lý Phân Công</span>
-                            <i class="menu-arrow"></i>
-                        </a>
-                    </li>
-                    <hr />
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="typcn typcn-document-text menu-icon"></i>
-                            <span class="menu-title">Quản Lý Địa Điểm</span>
-                            <i class="menu-arrow"></i>
-                        </a>
-                    </li>
-                    <hr />
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="typcn typcn-globe-outline menu-icon"></i>
-                            <span class="menu-title">Quản Lý Giá</span>
-                            <i class="menu-arrow"></i>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-
-            <!-- Phần dùng riêng-->
-            <div class="main-panel">
-                <div class="content-wrapper">
-                    <div class="row">
-                        <div class="col-lg-12 grid-margin stretch-card">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h4 class="card-title">Danh sách Tour</h4>
-                                    <form class="form-inline">
-                                        <button type="button" class="btn btn-primary mb-2" onclick="ThemTour()">
-                                            Thêm
-                                        </button>
-                                        <input type="text" class="form-control mb-2 mr-sm-2" style="margin-left:" id="inlineFormInputName2" placeholder="Tên Tour">
-                                    </form>
-                                    <div class="table-responsive">
-                                        
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Form thêm -->
-            <dialog id="them-tour" style="display:none">
-                <div class="auth-form-light text-left py-5 px-4 px-sm-5">
-                    <h4>Thêm Tour</h4>
-                    <form class="pt-3">
-                        <div class="form-group">
-                            <input type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="ID Tour">
-                        </div>
-                        <div class="form-group">
-                            <input type="text" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Tên Tour">
-                        </div>
-                        <div class="form-group">
-                            <input type="text" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Đặc Điểm">
-                        </div>
-                        <div class="form-group">
-                            <select class="form-control form-control-lg" id="exampleFormControlSelect2">
-                                <option>ID Loại</option>
-                                <option>Loại 1</option>
-                                <option>Loại 2</option>
-                            </select>
-                        </div>
-                        <div class="mt-3">
-                            <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">
-                                Thêm
-                            </a>
-                            <a class="btn btn-block btn-warning btn-lg font-weight-medium auth-form-btn">
-                                Hủy
-                            </a>
-                        </div>
-                    </form>
-                </div>
-            </dialog>
-
-        </div>
-    </div>
-    <script src="vendors/js/vendor.bundle.base.js"></script>
-    <script src="js/off-canvas.js"></script>
-    <script src="js/hoverable-collapse.js"></script>
-    <script src="js/template.js"></script>
-    <script src="js/settings.js"></script>
-    <script src="js/todolist.js"></script>
-    <script src="vendors/progressbar.js/progressbar.min.js"></script>
-    <script src="vendors/chart.js/Chart.min.js"></script>
-    <script src="js/dashboard.js"></script>
-    <script>
-        function ThemTour() {
-            document.getElementById("them-tour").style.display = 'block';
-        }
-        function SuamTour() {
-
-        }
-
-    </script>
-</body>
-</html>
