--- a/WebForm/Pages/Index.cshtml
+++ b/WebForm/Pages/Index.cshtml
@@ -4,6 +4,99 @@
     ViewData["Title"] = "Website Quản Lý Tour";
 
 }
+@using BUS;
+@using DTO;
+@{
+    List<TourDTO> list = new List<TourDTO>();
+    List<LoaiTourDTO> listloai = new List<LoaiTourDTO>();
+    TourBUS bus = new TourBUS();
+    LoaiTourBUS busloai = new LoaiTourBUS();
+    list = bus.List();
+    listloai = busloai.List();
+}
 
+<div class="main-panel">
+    <div class="content-wrapper">
+        <div class="row">
+            <div class="col-lg-12 grid-margin stretch-card">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title">Danh sách Tour</h4>
+                        <form class="form-inline">
+                            <button type="button" class="btn btn-primary mb-2" onclick="ThemTour()">
+                                Thêm
+                            </button>
+                            <input type="text" class="form-control mb-2 mr-sm-2" style="margin-left:" id="inlineFormInputName2" placeholder="Tên Tour">
+                        </form>
+                        <div class="table-responsive">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>Mã Tour</th>
+                                        <th>Tên Tour</th>
+                                        <th>Mô Tả</th>
+                                        <th>Loại Tour</th>
+                                        <th>Thao tác</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @{
+                                        foreach (TourDTO item in list)
+                                        {
+                                            string tenloai = listloai.Find(x => x.Id_Loai.Equals(item.Id_Loai)).Ten_Loai;
+                                            <tr>
+                                                <td>@item.Id_Tour</td>
+                                                <td>@item.Ten_Tour</td>
+                                                <td>@item.Dacdiem_Tour</td>
+                                                <td>@tenloai</td>
+                                                <td>
+                                                    <button type="button" class="btn btn-warning">Sửa</button>
+                                                    <button type="button" class="btn btn-danger">Xóa</button>
+                                                </td>
+                                            </tr>
+                                        }
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Form thêm -->
+<dialog id="them-tour" style="display:none">
+    <div class="auth-form-light text-left py-5 px-4 px-sm-5">
+        <h4>Thêm Tour</h4>
+        <form class="pt-3">
+            <div class="form-group">
+                <input type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="ID Tour">
+            </div>
+            <div class="form-group">
+                <input type="text" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Tên Tour">
+            </div>
+            <div class="form-group">
+                <input type="text" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Đặc Điểm">
+            </div>
+            <div class="form-group">
+                <select class="form-control form-control-lg" id="exampleFormControlSelect2">
+                    <option>ID Loại</option>
+                    <option>Loại 1</option>
+                    <option>Loại 2</option>
+                </select>
+            </div>
+            <div class="mt-3">
+                <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">
+                    Thêm
+                </a>
+                <a class="btn btn-block btn-warning btn-lg font-weight-medium auth-form-btn">
+                    Hủy
+                </a>
+            </div>
+        </form>
+    </div>
+</dialog>
 
 
