--- a/WebForm/Pages/Shared/QuanLyDoan.cshtml
+++ b/WebForm/Pages/Shared/QuanLyDoan.cshtml
@@ -1,5 +1,70 @@
 ﻿@page
 @model WebForm.Pages.Shared.QuanLyDoanModel
 @{
-
+    ViewData["Title"] = "Website Quản Lý Tour";
+    Layout = "_Layout";
 }
+
+@using BUS;
+@using DTO;
+@{
+    List<DoanDuLichDTO> list_d = new List<DoanDuLichDTO>();
+    DoanDuLichBUS bus_d = new DoanDuLichBUS();
+    list_d = bus_d.List();
+}
+
+<div class="main-panel">
+    <div class="content-wrapper">
+        <div class="row">
+            <div class="col-lg-12 grid-margin stretch-card">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title">Danh sách Đoàn Du Lịch</h4>
+                        <form class="form-inline">
+                            <button type="button" class="btn btn-primary mb-2" onclick="ThemDoan()">
+                                Thêm
+                            </button>
+                            <input type="text" class="form-control mb-2 mr-sm-2" style="margin-left:" id="inlineFormInputName2" placeholder="Tên Đoàn">
+                        </form>
+                        <div class="table-responsive">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>Mã Đoàn</th>
+                                        <th>Tên Đoàn</th>
+                                        <th>Mã Tour</th>
+                                        <th>Ngày khởi hành</th>
+                                        <th>Ngày kết thúc</th>
+                                        <th>Doanh thu</th>
+                                        <th>Nội dung</th>
+                                        <th>Thao tác</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @{
+                                        foreach (DoanDuLichDTO item in list_d)
+                                        {
+                                            <tr>
+                                                <td>@item.Id_Doan</td>
+                                                <td>@item.Ten_Doan</td>
+                                                <td>@item.Id_Tour</td>
+                                                <td>@item.Ngaykhoihanh</td>
+                                                <td>@item.Ngayketthuc</td>
+                                                <td>@item.Doanhthu</td>
+                                                <td>@item.Noidung</td>
+                                                <td>
+                                                    <button type="button" class="btn btn-warning">Sửa</button>
+                                                    <button type="button" class="btn btn-danger">Xóa</button>
+                                                </td>
+                                            </tr>
+                                        }
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
