--- a/WebForm/Pages/Shared/QuanLyGia.cshtml
+++ b/WebForm/Pages/Shared/QuanLyGia.cshtml
@@ -1,4 +1,65 @@
 ﻿@page
 @model WebForm.Pages.Shared.QuanLyGiaModel
 @{
+    ViewData["Title"] = "Website Quản Lý Tour";
+    Layout = "_Layout";
 }
+
+@using BUS;
+@using DTO;
+@{
+    List<GiaDTO> list_g = new List<GiaDTO>();
+    GiaBUS bus_g = new GiaBUS();
+    list_g = bus_g.List();
+}
+<div class="main-panel">
+    <div class="content-wrapper">
+        <div class="row">
+            <div class="col-lg-12 grid-margin stretch-card">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title">Danh sách Giá</h4>
+                        <form class="form-inline">
+                            <button type="button" class="btn btn-primary mb-2" onclick="ThemGia()">
+                                Thêm
+                            </button>
+                            <input type="text" class="form-control mb-2 mr-sm-2" style="margin-left:" id="inlineFormInputName2" placeholder="Tên Giá">
+                        </form>
+                        <div class="table-responsive">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>Mã Giá</th>
+                                        <th>Mã Tour</th>
+                                        <th>Giá</th>
+                                        <th>Thời gian bắt đầu</th>
+                                        <th>Thời gian kết thúc</th>
+                                        <th>Thao tác</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @{
+                                        foreach (GiaDTO item in list_g)
+                                        {
+                                            <tr>
+                                                <td>@item.Id_Gia</td>
+                                                <td>@item.Id_Tour</td>
+                                                <td>@item.Gia</td>
+                                                <td>@item.Thoigianbatdau</td>
+                                                <td>@item.Thoigianketthuc</td>
+                                                <td>
+                                                    <button type="button" class="btn btn-warning">Sửa</button>
+                                                    <button type="button" class="btn btn-danger">Xóa</button>
+                                                </td>
+                                            </tr>
+                                        }
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
