--- a/WebForm/Pages/Shared/QuanLyKhachHang.cshtml
+++ b/WebForm/Pages/Shared/QuanLyKhachHang.cshtml
@@ -1,4 +1,70 @@
 ﻿@page
 @model WebForm.Pages.Shared.QuanLyKhachHangModel
 @{
+    ViewData["Title"] = "Website Quản Lý Tour";
+    Layout = "_Layout";
 }
+
+@using BUS;
+@using DTO;
+@{
+    List<KhachDTO> list_kh = new List<KhachDTO>();
+    KhachHangBUS bus_kh = new KhachHangBUS();
+    list_kh = bus_kh.List();
+}
+
+<div class="main-panel">
+    <div class="content-wrapper">
+        <div class="row">
+            <div class="col-lg-12 grid-margin stretch-card">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title">Danh sách Khách Hàng</h4>
+                        <form class="form-inline">
+                            <button type="button" class="btn btn-primary mb-2" onclick="ThemKhachHang()">
+                                Thêm
+                            </button>
+                            <input type="text" class="form-control mb-2 mr-sm-2" style="margin-left:" id="inlineFormInputName2" placeholder="Tên Khách hàng">
+                        </form>
+                        <div class="table-responsive">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>Mã khách hàng</th>
+                                        <th>Họ tên</th>
+                                        <th>CMND</th>
+                                        <th>Địa chỉ</th>
+                                        <th>Giới tính</th>
+                                        <th>Số điện thoại</th>
+                                        <th>Quốc tịch</th>
+                                        <th>Thao tác</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @{
+                                        foreach (KhachDTO item in list_kh)
+                                        {
+                                            <tr>
+                                                <td>@item.Id_Khach</td>
+                                                <td>@item.Hoten_Khach</td>
+                                                <td>@item.Cmnd_Khach</td>
+                                                <td>@item.Diachi_Khach</td>
+                                                <td>@item.Gioitinh_Khach</td>
+                                                <td>@item.Sdt_Khach</td>
+                                                <td>@item.Quoctich</td>
+                                                <td>
+                                                    <button type="button" class="btn btn-warning">Sửa</button>
+                                                    <button type="button" class="btn btn-danger">Xóa</button>
+                                                </td>
+                                            </tr>
+                                        }
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
