--- a/WebForm/Pages/Shared/QuanLyNhanVien.cshtml
+++ b/WebForm/Pages/Shared/QuanLyNhanVien.cshtml
@@ -1,4 +1,66 @@
 ﻿@page
 @model WebForm.Pages.Shared.QuanLyNhanVienModel
 @{
+    ViewData["Title"] = "Website Quản Lý Tour";
+    Layout = "_Layout";
 }
+
+@using BUS;
+@using DTO;
+@{
+    List<NhanVienDTO> list_nv = new List<NhanVienDTO>();
+    NhanVienBUS bus_nv = new NhanVienBUS();
+    list_nv = bus_nv.List();
+}
+
+<div class="main-panel">
+    <div class="content-wrapper">
+        <div class="row">
+            <div class="col-lg-12 grid-margin stretch-card">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title">Danh sách Nhân Viên</h4>
+                        <form class="form-inline">
+                            <button type="button" class="btn btn-primary mb-2" onclick="ThemNhanVien()">
+                                Thêm
+                            </button>
+                            <input type="text" class="form-control mb-2 mr-sm-2" style="margin-left:" id="inlineFormInputName2" placeholder="Tên Nhân Viên">
+                        </form>
+                        <div class="table-responsive">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>Mã Nhân Viên</th>
+                                        <th>Họ tên</th>
+                                        <th>Email</th>
+                                        <th>Số điện thoại</th>
+                                        <th>Giới tính</th>
+                                        <th>Thao tác</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @{
+                                        foreach (NhanVienDTO item in list_nv)
+                                        {
+                                            <tr>
+                                                <td>@item.Id_NV</td>
+                                                <td>@item.Hoten_NV</td>
+                                                <td>@item.Email_NV</td>
+                                                <td>@item.Sdt_NV</td>
+                                                <td>@item.Gioitinh_NV</td>
+                                                <td>
+                                                    <button type="button" class="btn btn-warning">Sửa</button>
+                                                    <button type="button" class="btn btn-danger">Xóa</button>
+                                                </td>
+                                            </tr>
+                                        }
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
