--- a/WebForm/Pages/Shared/QuanLyPhanCong.cshtml
+++ b/WebForm/Pages/Shared/QuanLyPhanCong.cshtml
@@ -1,4 +1,62 @@
 ﻿@page
 @model WebForm.Pages.Shared.QuanLyPhanCongModel
 @{
+    ViewData["Title"] = "Website Quản Lý Tour";
+    Layout = "_Layout";
 }
+
+@using BUS;
+@using DTO;
+@{
+    List<PhanCongDTO> list_pc = new List<PhanCongDTO>();
+    PhanCongBUS bus_pc = new PhanCongBUS();
+    list_pc = bus_pc.List();
+}
+
+<div class="main-panel">
+    <div class="content-wrapper">
+        <div class="row">
+            <div class="col-lg-12 grid-margin stretch-card">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title">Danh sách Phân Công</h4>
+                        <form class="form-inline">
+                            <button type="button" class="btn btn-primary mb-2" onclick="ThemPhanCong()">
+                                Thêm
+                            </button>
+                            <input type="text" class="form-control mb-2 mr-sm-2" style="margin-left:" id="inlineFormInputName2" placeholder="...">
+                        </form>
+                        <div class="table-responsive">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>Mã Đoàn</th>
+                                        <th>Mã Nhân Viên</th>
+                                        <th>Nhiệm vụ</th>
+                                        <th>Thao tác</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @{
+                                        foreach (PhanCongDTO item in list_pc)
+                                        {
+                                            <tr>
+                                                <td>@item.Id_Doan</td>
+                                                <td>@item.Id_NV</td>
+                                                <td>@item.Nhiemvu</td>
+                                                <td>
+                                                    <button type="button" class="btn btn-warning">Sửa</button>
+                                                    <button type="button" class="btn btn-danger">Xóa</button>
+                                                </td>
+                                            </tr>
+                                        }
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
