--- a/WebForm/Pages/Shared/QuanLyPhanCong.cshtml
+++ b/WebForm/Pages/Shared/QuanLyPhanCong.cshtml
@@ -1,4 +1,68 @@
 ﻿@page
 @model WebForm.Pages.Shared.QuanLyPhanCongModel
 @{
+    ViewData["Title"] = "Website Quản Lý Tour";
+    Layout = "_Layout";
+
 }
+@using BUS;
+@using DTO;
+@{
+    List<TourDTO> list = new List<TourDTO>();
+    List<LoaiTourDTO> listloai = new List<LoaiTourDTO>();
+    TourBUS bus = new TourBUS();
+    LoaiTourBUS busloai = new LoaiTourBUS();
+    list = bus.List();
+    listloai = busloai.List();
+}
+
+<div class="main-panel">
+    <div class="content-wrapper">
+        <div class="row">
+            <div class="col-lg-12 grid-margin stretch-card">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title">Danh sách Tour</h4>
+                        <form class="form-inline">
+                            <button type="button" class="btn btn-primary mb-2" onclick="ThemTour()">
+                                Thêm
+                            </button>
+                            <input type="text" class="form-control mb-2 mr-sm-2" style="margin-left:" id="inlineFormInputName2" placeholder="Tên Tour">
+                        </form>
+                        <div class="table-responsive">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>Mã Tour</th>
+                                        <th>Tên Tour</th>
+                                        <th>Mô Tả</th>
+                                        <th>Loại Tour</th>
+                                        <th>Thao tác</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @{
+                                        foreach (TourDTO item in list)
+                                        {
+                                            string tenloai = listloai.Find(x => x.Id_Loai.Equals(item.Id_Loai)).Ten_Loai;
+                                            <tr>
+                                                <td>@item.Id_Tour</td>
+                                                <td>@item.Ten_Tour</td>
+                                                <td>@item.Dacdiem_Tour</td>
+                                                <td>@tenloai</td>
+                                                <td>
+                                                    <button type="button" class="btn btn-warning">Sửa</button>
+                                                    <button type="button" class="btn btn-danger">Xóa</button>
+                                                </td>
+                                            </tr>
+                                        }
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
