--- a/WebForm/Pages/Shared/QuanLyKhachHang.cshtml
+++ b/WebForm/Pages/Shared/QuanLyKhachHang.cshtml
@@ -8,12 +8,9 @@
 @using BUS;
 @using DTO;
 @{
-    List<TourDTO> list = new List<TourDTO>();
-    List<LoaiTourDTO> listloai = new List<LoaiTourDTO>();
-    TourBUS bus = new TourBUS();
-    LoaiTourBUS busloai = new LoaiTourBUS();
-    list = bus.List();
-    listloai = busloai.List();
+    List<KhachDTO> list_kh = new List<KhachDTO>();
+    KhachHangBUS bus_kh = new KhachHangBUS();
+    list_kh = bus_kh.List();
 }
 
 <div class="main-panel">
@@ -22,34 +19,39 @@
             <div class="col-lg-12 grid-margin stretch-card">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title">Danh sách Tour</h4>
+                        <h4 class="card-title">Danh sách Khách hàng</h4>
                         <form class="form-inline">
-                            <button type="button" class="btn btn-primary mb-2" onclick="ThemTour()">
+                            <button type="button" class="btn btn-primary mb-2" onclick="ThemKhachHang()">
                                 Thêm
                             </button>
-                            <input type="text" class="form-control mb-2 mr-sm-2" style="margin-left:" id="inlineFormInputName2" placeholder="Tên Tour">
+                            <input type="text" class="form-control mb-2 mr-sm-2" style="margin-left:" id="inlineFormInputName2" placeholder="...">
                         </form>
                         <div class="table-responsive">
                             <table class="table table-striped">
                                 <thead>
                                     <tr>
-                                        <th>Mã Tour</th>
-                                        <th>Tên Tour</th>
-                                        <th>Mô Tả</th>
-                                        <th>Loại Tour</th>
+                                        <th>Mã khách</th>
+                                        <th>Họ tên</th>
+                                        <th>CMND</th>
+                                        <th>Địa Chỉ</th>
+                                        <th>Giới Tính</th>
+                                        <th>Số điện thoại</th>
+                                        <th>Quốc Tịch</th>
                                         <th>Thao tác</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     @{
-                                        foreach (TourDTO item in list)
+                                        foreach (KhachDTO item in list_kh)
                                         {
-                                            string tenloai = listloai.Find(x => x.Id_Loai.Equals(item.Id_Loai)).Ten_Loai;
                                             <tr>
-                                                <td>@item.Id_Tour</td>
-                                                <td>@item.Ten_Tour</td>
-                                                <td>@item.Dacdiem_Tour</td>
-                                                <td>@tenloai</td>
+                                                <td>@item.Id_Khach</td>
+                                                <td>@item.Hoten_Khach</td>
+                                                <td>@item.Cmnd_Khach</td>
+                                                <td>@item.Diachi_Khach</td>
+                                                <td>@item.Gioitinh_Khach</td>
+                                                <td>@item.Sdt_Khach</td>
+                                                <td>@item.Quoctich</td>
                                                 <td>
                                                     <button type="button" class="btn btn-warning">Sửa</button>
                                                     <button type="button" class="btn btn-danger">Xóa</button>
