--- a/WebForm/Pages/Shared/_Layout.cshtml
+++ b/WebForm/Pages/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="@Url.Content("~/vendors/typicons.font/font/typicons.css")" media="screen" />
     <link rel="stylesheet" type="text/css" href="@Url.Content("~/vendors/css/vendor.bundle.base.css")" media="screen" />
     <link rel="stylesheet" type="text/css" href="@Url.Content("~/css/vertical-layout-light/style.css")" media="screen" />
+    <link rel="stylesheet" type="text/css" href="@Url.Content("~/css/hung_css.css")" media="screen" />
     <link rel="stylesheet" type="text/css" href="@Url.Content("~/images/favicon.png")" media="screen" />
 </head>
 <body>
@@ -131,7 +132,6 @@
             @RenderBody()
 
 
-
         </div>
     </div>
     <script src="vendors/js/vendor.bundle.base.js"></script>
@@ -146,10 +146,12 @@
     <script>
         function ThemTour() {
             document.getElementById("them-tour").style.display = 'block';
-        }
-        function SuamTour() {
 
         }
+        function SuaTour() {
+
+        }
+
 
     </script>
 </body>
