--- a/WebForm/Pages/Shared/QuanLyTour.cshtml
+++ b/WebForm/Pages/Shared/QuanLyTour.cshtml
@@ -68,34 +68,34 @@
 </div>
 
 <!-- Form thêm -->
-<dialog id="them-tour" style="display:none">
-    <div class="auth-form-light text-left py-5 px-4 px-sm-5">
-        <h4>Thêm Tour</h4>
-        <form class="pt-3">
-            <div class="form-group">
-                <input type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="ID Tour">
-            </div>
-            <div class="form-group">
-                <input type="text" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Tên Tour">
-            </div>
-            <div class="form-group">
-                <input type="text" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Đặc Điểm">
-            </div>
-            <div class="form-group">
-                <select class="form-control form-control-lg" id="exampleFormControlSelect2">
-                    <option>ID Loại</option>
-                    <option>Loại 1</option>
-                    <option>Loại 2</option>
-                </select>
-            </div>
-            <div class="mt-3">
-                <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">
-                    Thêm
-                </a>
-                <a class="btn btn-block btn-warning btn-lg font-weight-medium auth-form-btn">
-                    Hủy
-                </a>
-            </div>
-        </form>
+<div id="them-tour" style="display:none" class="modal">
+        <div class="auth-form-light text-left py-5 px-4 px-sm-5">
+            <h4>Thêm Tour</h4>
+            <form class="pt-3">
+                <div class="form-group">
+                    <input type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="ID Tour">
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Tên Tour">
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Đặc Điểm">
+                </div>
+                <div class="form-group">
+                    <select class="form-control form-control-lg" id="exampleFormControlSelect2">
+                        <option>ID Loại</option>
+                        <option>Loại 1</option>
+                        <option>Loại 2</option>
+                    </select>
+                </div>
+                <div class="mt-3">
+                    <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn">
+                        Thêm
+                    </a>
+                    <a class="btn btn-block btn-warning btn-lg font-weight-medium auth-form-btn">
+                        Hủy
+                    </a>
+                </div>
+            </form>
+        </div>
     </div>
-</dialog>
